logs/offboard_pkg/build.make.166.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘void MultiBody::init_uav()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:22:12: error: base operand of ‘->’ has non-pointer type ‘std::vector<TaskManager>’
   22 |         uav->push_back(uav0);
      |            ^~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
